# CG-homework

./: 实验报告.docx
图形程序（qt5编译）/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
画图程序（clion编译）/: CMakeLists.txt  MyObject.cpp  MyObject.h  main.cpp
